# 12

./: .env  Dockerfile  config.py  db.py  log.txt  main.py  main_.py  pyproject.toml  requirements.txt  test02.db
bdpotgres/: db_congig.py  models.py
files/: index.html
files/OLD/: main_.py  main__.py
migrations/: env.py
models/: db.py  good.py  tables.py  users.py
public/: db.py  goods.py  router_users.py  simlpe.py  users.py
