[tool.poetry]
name = "task2-fastapi"
version = "0.1.0"
description = ""
authors = ["ponOlgap <ponOlgap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
async-exit-stack = "^1.0.1"
async-generator = "^1.10"
python-multipart = "^0.0.6"
certifi = "^2023.11.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
